fix merge buttons overflowed

--- a/src/styles/color-themes/_ui.scss
+++ b/src/styles/color-themes/_ui.scss
@@ -108,6 +108,9 @@ select {
 
 .diff .view-body .divider {
     button.merge {
+        width: 100%;
+        padding: 0;
+
         background-color: transparent;
         color: var(--app-secondary-text-color);
         box-shadow: none;
